k8s/route.yaml
apiVersion: serving.knative.dev/v1
kind: Route
metadata:
  name: vote-ui
  labels:
    app: vote-ui
spec:
  port:
    targetPort: 8080-tcp
  traffic:
    - revisionName: vote-ui
      percent: 100
